CSS: prevent content to overlap the nav-bar (top)

--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -20,6 +20,7 @@ footer,
 .nav {
   box-shadow: 0 2px 2px -2px $shadow-color;
   overflow: auto;
+  margin-bottom: 1em;
 
   &-container {
     margin: 1rem auto;
